--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -14,23 +14,22 @@
             </ul>    
         </div> 
     </div>
-
     <section class="section hero">
-        <header class="parallax-window" data-parallax="scroll" data-image-src="/images/lexusIS_headerBG.jpg">
+        <header class="parallax-window use-parallax-mirror" data-parallax="scroll" data-image-src="/images/lexusIS_headerBG.jpg">
             <div class="parallax-section parallax">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row d-flex align-items-center h100" style="height:100vh;">
-                        <div class="col text-right pull-right">
+                        <div class="col offset-1">
                             <h1 class="display-2 text-white text-capitalize">Lexus <span>IS</span></h1>
                             <div class="h3 text-white light">Uncommon Design.</div>
                             <div class="h3 text-white light">Unprecedented Engineering.</div>
                         </div>
                     </div>
                 </div>
-            </div> 
+            </div>
         </header>
     </section>
-
+    
     <section class="section">
         <div class="container-fluid px-5">
            <div class="main-cta-stick mt-0">
@@ -67,13 +66,12 @@
             </div>
         </div>
     </section>
-    
     <section class="car-features">
         <header class="parallax-window" data-parallax="scroll" data-image-src="/images/block_1_bg.jpg">
             <div class="parallax-section parallax">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row car-features-row">
-                        <div class="col">
+                        <div class="col-6 offset-1">
                            <ul>
                                <li>A 17" Alloy wheel design with five twisted twin-spokes produces an elegant look to the IS.</li>
                                <li>LED Daytime Running Headlamp in the signature Lexus arrowhead that is designed to clearly light the way. </li>
@@ -85,7 +83,6 @@
             </div> 
         </header>
     </section>
-
     <section class="car-features">
         <header class="parallax-window" data-parallax="scroll" data-image-src="/images/block_2_bg.jpg">
             <div class="parallax-section parallax">
@@ -103,7 +100,6 @@
             </div> 
         </header>
     </section>
-    
     <section class="car-features">
         <header class="parallax-window" data-parallax="scroll" data-image-src="/images/block_3_bg.jpg">
             <div class="parallax-section parallax">
@@ -121,7 +117,6 @@
             </div> 
         </header>
     </section>
-  
     <section class="car-features">
         <div class="container">
             <div class="car-model-pic mx-auto wrap">
@@ -129,8 +124,7 @@
             </div>
                <span class="h3 mx-auto light d-block w-75 py-5">The IS brings together show-stopping look with <span class="font-weight-bold">advanced hybrid technology</span> and unparalleled comfort. With athletic stance and longe coupe roofline, this exeptional sports saloon is engineered to deliver an effortless, heart-racing performance.</span>
         </div>
-    </section>
-       
+    </section>     
     <section class="car-vr">
         <div class="container">
             <div class="row">
@@ -224,7 +218,97 @@
                </div>
            </div>
     </section>
-   
+    <section class="car-specials my-5">
+        <div class="container">
+            <div class="row my-4">
+                <div class="col">
+                    <div class="display-4">Special Offers</div>
+                    <div class="h4 light">Exclusive deals of other similar models to the IS 200T EX</div>      
+                </div>  
+            </div>
+            <div class="row mx-auto text-center">
+                <div class="col-4 car-special-item">
+                    <img src="/images/specials-1.jpg" alt="" class="img-fluid">
+                    <span class="">ES 300H EX 2.0 FWD (Hybrid)</span>
+                    <span class="">R670 700</span>
+                    <span class="">R28 000</span>
+                </div>
+                <div class="col-4 car-special-item">
+                    <img src="/images/specials-2.jpg" alt="" class="img-fluid">
+                    <span class="">GS300EX (Auto)</span>
+                    <span class="">R770 700</span>
+                    <span class="">R30 000</span>
+                </div>
+                <div class="col-4 car-special-item">
+                    <img src="/images/specials-3.jpg" alt="" class="img-fluid">
+                    <span class="">NX 300 E</span>
+                    <span class="">R599 700</span>
+                    <span class="">R20 000</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr class="stitch-1">
+    <section class="car-dealerships my-4">
+        <div class="container">
+            <div class="row">
+                <div class="row my-4">
+                     <div class="display-4">Lexus Dealerships</div>
+                </div>
+            </div>
+            <div class="row mx-auto text-center">
+                    <div class="col-4">
+                        <div class="card text-left">
+                            <div class="card-header">
+                                <span class="h3 text-uppercase">Midrand</span>
+                                <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                            </div>
+                            <div class="card-body">
+                                <span class="d-block">1682 New Rd</span>
+                                <span class="d-block">Carswald</span>
+                                <span class="d-block">Midrand</span>
+                            </div>
+                            <div class="card-footer text-center">
+                                <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
+                            </div>
+                        </div>               
+                    </div>
+                    <div class="col-4">
+                       <div class="card text-left">
+                            <div class="card-header">
+                                <span class="h3 text-uppercase">Midrand</span>
+                                <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                            </div>
+                            <div class="card-body">
+                                <span class="d-block">1682 New Rd</span>
+                                <span class="d-block">Carswald</span>
+                                <span class="d-block">Midrand</span>
+                            </div>
+                            <div class="card-footer text-center">
+                                <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
+                            </div>
+                        </div>   
+                    </div>
+                    <div class="col-4">
+                      <div class="card text-left">
+                            <div class="card-header">
+                                <span class="h3 text-uppercase">Midrand</span>
+                                <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
+                            </div>
+                            <div class="card-body">
+                                <span class="d-block">1682 New Rd</span>
+                                <span class="d-block">Carswald</span>
+                                <span class="d-block">Midrand</span>
+                            </div>
+                            <div class="card-footer text-center">
+                                <span class="h4"><img src="/images/phone-white.png" alt=""> 012 231 4123</span>
+                            </div>
+                        </div>   
+                    </div>
+            </div> 
+        </div>
+    </section>
+    
     
     
 
