--- a/Views/Shared/navigation.cshtml
+++ b/Views/Shared/navigation.cshtml
@@ -1,7 +1,7 @@
 ﻿<nav id="main-nav" class="navbar navbar-expand-lg fixed-top navbar-dark nav-padding">
     <div class="container-fluid">
         <img src="~/images/bidvest-logo.png" alt="" class="bidvest-logo">
-        <div class="mask pseudo"><a class="navbar-brand" href="/" alt="Lexus"><img src="~/images/lexus-white.svg" /></a></div>
+        <div class="mask pseudo"><a class="navbar-brand" href="/" alt="Lexus"><img src="~/images/lexus-logo-2.png" /></a></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
