--- a/wwwroot/scss/lexus.scss
+++ b/wwwroot/scss/lexus.scss
@@ -53,6 +53,7 @@ html,
 
 //Mixins
 @import "bootstrap/mixins/slanted-edges"; 
+@import "bootstrap/mixins/slanted-edges-2";
 
 //Pages
 @import "pages/pre-owned"; 
