--- a/wwwroot/scss/theme.scss
+++ b/wwwroot/scss/theme.scss
@@ -6,7 +6,8 @@
     padding:0;
     height: 65px;
 //	transition: $transition-base; 
-    background: $gray-900;
+//    background: $gray-900;
+    background: black;
 	z-index: 1040;
 	&.nav-padding {
 //        padding-top: 20px;
@@ -14,7 +15,7 @@
 	}
 	.navbar-brand {
 		img {
-			height: 30px;
+			height: 42px;
             margin-left:140px;
 		}
 	}
@@ -250,8 +251,11 @@ label {
     }   
 }
 
+//STITCHES
 
-//CHECKBOXES
+.stitch-1 { 
+
+}
 
 
 
