--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -109,14 +109,14 @@
         </div>
     </section>
     <div class="stitch-1"></div>
-    <section class="car-dealerships my-4">
+    <section class="car-dealerships my-5">
         <div class="container">
             <div class="row">
                 <div class="row my-4">
                      <div class="display-4">Lexus Dealerships</div>
                 </div>
             </div>
-            <div class="row mx-auto text-center">
+            <div class="row mx-auto text-center my-5">
                     <div class="col-4">
                         <div class="card text-left">
                             <div class="card-header">
