--- a/Views/Home/models.cshtml
+++ b/Views/Home/models.cshtml
@@ -5,6 +5,7 @@
 <div class="bg"></div>
 <div class="models">
     <section class="section sedans">
+       <div class="stitching"><img src="" alt=""></div>
         <div class="container px-5">
             <div class="row my-5">
                 <div class="col-3">
@@ -119,6 +120,8 @@
             <div class="row mx-auto text-center my-5">
                     <div class="col-4">
                         <div class="card text-left">
+                            <img src="/images/map.jpg" alt="" class="midrand-map">
+                             <span>Find out more about the Midrand Dealership</span>
                             <div class="card-header">
                                 <span class="h3 text-uppercase">Midrand</span>
                                 <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
@@ -135,8 +138,10 @@
                     </div>
                     <div class="col-4">
                        <div class="card text-left">
+                            <img src="/images/map.jpg" alt="" class="midrand-map">
+                            <span>Find out more about the Kingsmead Dealership</span>
                             <div class="card-header">
-                                <span class="h3 text-uppercase">Midrand</span>
+                                <span class="h3 text-uppercase">Kingsmead</span>
                                 <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
                             </div>
                             <div class="card-body">
@@ -151,8 +156,10 @@
                     </div>
                     <div class="col-4">
                       <div class="card text-left">
+                            <img src="/images/map.jpg" alt="" class="midrand-map">
+                             <span>Find out more about the Lynwood Dealership</span>
                             <div class="card-header">
-                                <span class="h3 text-uppercase">Midrand</span>
+                                <span class="h3 text-uppercase">Lynwood</span>
                                 <img src="/images/bidvest-logo-white.png" alt="" class="float-right">
                             </div>
                             <div class="card-body">
